syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Covid19Api.Grpc.CountryStatistics";

service CountryStatisticsService {
  rpc LoadLatestCountryStatistics (google.protobuf.Empty) returns (CountryStatisticsGrpcMessage);
  rpc LoadHistoricalCountryStatistics (google.protobuf.Empty) returns (CountryStatisticsGrpcMessage);
  rpc LoadLatestCountryStatisticForCountry (CountryStatisticsForCountryGrpcMessage) returns (CountryStatisticGrpcMessage);
  rpc LoadHistoricalCountryStatisticForCountry (CountryStatisticsForCountryGrpcMessage) returns (CountryStatisticsGrpcMessage);
}

message CountryStatisticsGrpcMessage {
  repeated CountryStatisticGrpcMessage countryStatistics = 1;
}

message CountryStatisticsForCountryGrpcMessage {
  string country = 1;
}

message CountryStatisticGrpcMessage {
  string country = 1;
  string countryCode = 2;
  int32 totalCases = 3;
  int32 newCases = 4;
  int32 totalDeaths = 5;
  int32 newDeaths = 6;
  int32 recoveredCases = 7;
  int32 activeCases = 8;
  google.protobuf.Timestamp fetchedAt = 9;
}